emptyNavSpacing has height of 50px when nav is fixed, prevents jumping

--- a/static/style.styl
+++ b/static/style.styl
@@ -48,3 +48,5 @@ html, body
 			max-height 200px
 .navbar
 	margin-bottom 0px
+.emptyNavSpacing
+	height 50px
